# ml-eng-challenge

./: .gitignore  README.md  docker-compose.yaml
api/: Dockerfile  app.py  config.py  pyproject.toml  settings.yaml
api/fetchers/: model_fetcher.py
api/src/: __init__.py  parser.py  routes.py  security.py
train_pipeline/: Dockerfile  config.py  property_model.py  pyproject.toml  settings.yaml
train_pipeline/components/: __init__.py
train_pipeline/components/fetchers/: csv_fetcher.py
train_pipeline/components/ml_pipeline/: evaluation.py  pipeline.py
train_pipeline/components/trainers/: sequential_trainer.py
train_pipeline/components/writers/: __init__.py  mlflow_writer.py
train_pipeline/entrypoints/: property_model.py
