[tool.poetry]
name = "bain-ml-eng-challenge-train-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
mlflow = "^2.13.2"
scikit-learn = "^1.5.0"
category-encoders = "^2.6.3"
numpy = "^1.26.4"
pandas = "^2.2.2"
dynaconf = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
