[tool.poetry]
name = "bain-ml-eng-challenge-train-pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.2.5"
pandas = "^2.2.2"
category-encoders = "^2.6.3"
entrypoints = "^0.4"
mlflow = "^2.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
